--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -1,14 +1,56 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/styles.css">
-  <title>About me</title>
-</head>
-<body>
-<h1>Hello World</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+<link rel="stylesheet" type="text/css" href="css/pippo.css">
+    <meta charset="utf-8">
+    <title>ABOUT ME</title>
+  </head>
+  <body>
+    <div class="form">
+      <img src="images/me.jpg" class="profile_picture"
+width="170px">
+
+<!-- My name -->
+<h1>Martina Currenti</h1>
+
+<!-- My studies -->
+<h4>Media, Journalism and Publishing <br> student at Oxford Brookes
+</h4>
+
+<!-- Description -->
+<h3> Hello there! </h3>
+
+<h3> I'm Marty, and I am the mind behind Pretty in Font. </h3>
+<h3> This website was born as a project for my Typographic design for Page and Screen, and it unites my passion for romantic comedies, and the fact that I needed to find a good and interesting topic in order to get a decent mark in this module. </h3>
+<h3> Jokes aside, I am really enjoying working on this blog, as it allows me to practice my storytelling skills. I would really love becoming a published author in the future, but for now I aspire to finish university and find a job as either a journalist or a publisher – I haven't made up my mind yet, and I do not really mind working in either industry. </h3>
+
+<!-- List section -->
+<p>Here's three random <br> things about me:</p>
+
+<!-- Proper list -->
+<ol>
+  1- My favourite movies of all times are Jurassic Park 1, 2, and 3. No romantic comedies? Shocking, I know! Nevertheless, they are movies from my childhood, so they will always have a special spot in my heart; <br> <br>
+
+2- I love cappuccinos! I would drink them all the time: for breakfast, for dinner, even as a midnight snack! Some may say that I'm obsessed with them, and I guess they are right; <br> <br>
+
+3- If I could change anything about myself, it would be my lactose intolerance.
+</ol>
+
+<!-- My socials + hyperlinks -->
+ <h5>
+<a href="https://www.instagram.com/martinacurrenti_/">
+<img class="instagram" src="images/3.png"> </a>
+
+<a href="https://github.com/martinacurrenti/prettyinfont"> <img class="github" src="images/5.png"> </a>
+
+<a href="https://www.facebook.com/marticurrenti">
+<img class="facebook" src="images/4.png"> </a>
+<br>
+<br>
+YOU CAN FIND ME HERE: <br>
+(Do not esitate to follow me!) </h5>
+
+</div>
+
+  </body>
 </html>
