--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-<link rel="stylesheet" type="text/css" href="css/pippo.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8">
     <title>ABOUT ME</title>
   </head>
