--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -22,14 +22,14 @@ width="170px">
 
 <h3> I'm Marty, and I am the mind behind Pretty in Font. </h3>
 <h3> This website was born as a project for my Typographic design for Page and Screen, and it unites my passion for romantic comedies, and the fact that I needed to find a good and interesting topic in order to get a decent mark in this module. </h3>
-<h3> Jokes aside, I am really enjoying working on this blog, as it allows me to practice my storytelling skills. I would really love becoming a published author in the future, but for now I aspire to finish university and find a job as either a journalist or a publisher – I haven't made up my mind yet, and I do not really mind working in either industry. </h3>
-
+<h3> Jokes aside, I am really enjoying working on this blog, as it allows me to practice my writing skills. I would really love to become a published author in the future, but for now I aspire to finish university and find a job as either a journalist or a publisher/editor – I haven't made up my mind yet, and I do not really mind working in either industry. I guess that one of the perks of doing a varied degree is that I have more options to choose from. </h3>
+<h3> However, I do know one thing for sure: that I have always loved writing, and that "when i grow up", I want to become a storyteller – it doesn't matter if the stories I get to share are real or fictional.
 <!-- List section -->
-<p>Here's three random <br> things about me:</p>
+<p>Here's three fun facts <br> things about me:</p>
 
 <!-- Proper list -->
 <ol>
-  1- My favourite movies of all times are Jurassic Park 1, 2, and 3. No romantic comedies? Shocking, I know! Nevertheless, they are movies from my childhood, so they will always have a special spot in my heart; <br> <br>
+  1- My favourite movies of all times belong to the original Jurassic Park trilogy. No romantic comedies? Shocking, I know! Nevertheless, they are movies from my childhood, so they will always have a special spot in my heart; <br> <br>
 
 2- I love cappuccinos! I would drink them all the time: for breakfast, for dinner, even as a midnight snack! Some may say that I'm obsessed with them, and I guess they are right; <br> <br>
 
@@ -37,7 +37,9 @@ width="170px">
 </ol>
 
 <!-- My socials + hyperlinks -->
- <h5>
+ <h5> YOU CAN FIND ME AND MY WORKS HERE: <br>
+(Do not esitate to give me a follow!)
+ <br> <br>
 <a href="https://www.instagram.com/martinacurrenti_/">
 <img class="instagram" src="images/3.png"> </a>
 
@@ -45,10 +47,7 @@ width="170px">
 
 <a href="https://www.facebook.com/marticurrenti">
 <img class="facebook" src="images/4.png"> </a>
-<br>
-<br>
-YOU CAN FIND ME HERE: <br>
-(Do not esitate to follow me!) </h5>
+ </h5>
 
 </div>
 
