--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -38,7 +38,7 @@ width="170px">
 
 <!-- My socials + hyperlinks -->
  <h5> YOU CAN FIND ME AND MY WORKS HERE: <br>
-(Do not esitate to give me a follow!)
+(Do not hesitate to give me a follow!)
  <br> <br>
 <a href="https://www.instagram.com/martinacurrenti_/">
 <img class="instagram" src="images/3.png"> </a>
