--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -52,7 +52,7 @@ width="170px">
 <a href="https://www.instagram.com/martinacurrenti_/">
 <img class="instagram" src="images/3.png"> </a>
 
-<a href="https://github.com/martinacurrenti/prettyinfont"> <img class="github" src="images/5.png"> </a>
+<a href="https://existnewsmedia.wordpress.com/"> <img class="github" src="images/5.png"> </a>
 
 <a href="https://www.facebook.com/marticurrenti">
 <img class="facebook" src="images/4.png"> </a>
